# python-logging-examples

./: README.md  pyproject.toml
basic_examples/: basic_1.py  basic_2.py  basic_3.py  basic_4.py
django_example/example/: settings.py
